fixed add statement modal overflow issue

--- a/src/components/Declarations.css
+++ b/src/components/Declarations.css
@@ -4,7 +4,9 @@
   background: rgb(56, 119, 156);
   padding: 5px;
   margin: 5px;
-  width: 300px;
+  width: inherit;
   position: absolute;
   z-index: 2;
+  
+  /* minWidth: "300px"; */
 }
