--- a/src/components/TypeDeclarations.css
+++ b/src/components/TypeDeclarations.css
@@ -4,7 +4,7 @@
   background: rgb(156, 96, 56);
   padding: 5px;
   margin: 5px;
-  width: 300px;
+  width: inherit;
   position: absolute;
   z-index: 2;
 }
